--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,10 @@ spring:
         password: ''
         url: jdbc:h2:mem:steps;DB_CLOSE_DELAY=-1
         username: sa
+    h2:
+        console:
+            enabled: true
+            path: /h2-db-console
 logging:
     level:
         org:
